tests/error/comptime_arg_errors/non_droppable.err
Error: Invalid annotation (at $FILE:9:15)
  | 
7 | 
8 | @guppy
9 | def main(q: T @comptime) -> None:
  |                ^^^^^^^^ Non-droppable type `T` is not allowed as a comptime argument

Guppy compilation failed due to 1 previous error
